--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -76,7 +76,7 @@ form.form-delete {
 
       &.favorite {
         &.favorited, &.favorited:hover {
-          color: $warning;
+          color: #ffc107;
         }
       }
 
