--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,5 +1,7 @@
+$white: #fff;
+
 // Body
-$body-bg: #f8fafc;
+$body-bg: $white;
 
 // Typography
 $font-family-sans-serif: 'Nunito', sans-serif;
@@ -17,4 +19,3 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
-$white: #fff;
