--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,10 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+body {
+  background: #f8fafc;
+}
+
 .counters {
     margin-right: 30px;
     font-size: 10px;
